email form done

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,12 @@
 .login-social-margin{
   margin-top: 1px;
 }
+.scale-image{
+  transition: transform .5s;
+}
+.scale-image:hover{
+  transform: scale(1.1);
+}
+.our-works{
+  background: #111430;
+}
